pyPddl/antlr4_directory/pddlParser.py
# Generated from pddl.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pddlParser ( Parser ):

    grammarFileName = "pddl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'define'", "'domain'", "':typing'", "':duration-inequalities'", 
                     "':time'", "':fluents'", "':adl'", "':durative-actions'", 
                     "':requirements'", "'-'", "':types'", "'not'", "':predicates'", 
                     "':functions'", "'assign'", "'increase'", "'decrease'", 
                     "'+'", "'*'", "'/'", "'>'", "'>='", "'<='", "'<'", 
                     "'='", "'#t'", "'and'", "':parameters'", "':precondition'", 
                     "':effect'", "':action'", "':event'", "':process'", 
                     "'problem'", "':domain'", "':objects'", "':init'", 
                     "':goal'", "':metric'", "'maximize'", "'minimize'", 
                     "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "LP", "RP", "VAR", "NAME", 
                      "VARIABLE", "NUMBER", "WS" ]

    RULE_pddlDoc = 0
    RULE_domain = 1
    RULE_domainName = 2
    RULE_requireKey = 3
    RULE_requirements = 4
    RULE_parentType = 5
    RULE_typeName = 6
    RULE_type = 7
    RULE_types = 8
    RULE_atomName = 9
    RULE_groundAtomParameter = 10
    RULE_liftedAtomParameter = 11
    RULE_typedAtomParameter = 12
    RULE_atomParameter = 13
    RULE_atom = 14
    RULE_typedAtom = 15
    RULE_positiveLiteral = 16
    RULE_typedPositiveLiteral = 17
    RULE_negativeLiteral = 18
    RULE_booleanLiteral = 19
    RULE_predicates = 20
    RULE_functions = 21
    RULE_modificator = 22
    RULE_operator = 23
    RULE_comparator = 24
    RULE_number = 25
    RULE_delta = 26
    RULE_constant = 27
    RULE_assignmentSide = 28
    RULE_operationSide = 29
    RULE_operation = 30
    RULE_assignment = 31
    RULE_comparation = 32
    RULE_modification = 33
    RULE_precondition = 34
    RULE_effect = 35
    RULE_andPrecondition = 36
    RULE_andEffect = 37
    RULE_emptyPrecondition = 38
    RULE_preconditions = 39
    RULE_effects = 40
    RULE_parameters = 41
    RULE_opName = 42
    RULE_opParameters = 43
    RULE_opPrecondition = 44
    RULE_opEffect = 45
    RULE_action = 46
    RULE_event = 47
    RULE_process = 48
    RULE_problem = 49
    RULE_problemName = 50
    RULE_problemDomain = 51
    RULE_typedObjects = 52
    RULE_objects = 53
    RULE_init = 54
    RULE_goal = 55
    RULE_metric = 56

    ruleNames =  [ "pddlDoc", "domain", "domainName", "requireKey", "requirements", 
                   "parentType", "typeName", "type", "types", "atomName", 
                   "groundAtomParameter", "liftedAtomParameter", "typedAtomParameter", 
                   "atomParameter", "atom", "typedAtom", "positiveLiteral", 
                   "typedPositiveLiteral", "negativeLiteral", "booleanLiteral", 
                   "predicates", "functions", "modificator", "operator", 
                   "comparator", "number", "delta", "constant", "assignmentSide", 
                   "operationSide", "operation", "assignment", "comparation", 
                   "modification", "precondition", "effect", "andPrecondition", 
                   "andEffect", "emptyPrecondition", "preconditions", "effects", 
                   "parameters", "opName", "opParameters", "opPrecondition", 
                   "opEffect", "action", "event", "process", "problem", 
                   "problemName", "problemDomain", "typedObjects", "objects", 
                   "init", "goal", "metric" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    LP=42
    RP=43
    VAR=44
    NAME=45
    VARIABLE=46
    NUMBER=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PddlDocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(pddlParser.DomainContext,0)


        def problem(self):
            return self.getTypedRuleContext(pddlParser.ProblemContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_pddlDoc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPddlDoc" ):
                listener.enterPddlDoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPddlDoc" ):
                listener.exitPddlDoc(self)




    def pddlDoc(self):

        localctx = pddlParser.PddlDocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pddlDoc)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.domain()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.problem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(pddlParser.LP, 0)

        def domainName(self):
            return self.getTypedRuleContext(pddlParser.DomainNameContext,0)


        def RP(self):
            return self.getToken(pddlParser.RP, 0)

        def requirements(self):
            return self.getTypedRuleContext(pddlParser.RequirementsContext,0)


        def types(self):
            return self.getTypedRuleContext(pddlParser.TypesContext,0)


        def predicates(self):
            return self.getTypedRuleContext(pddlParser.PredicatesContext,0)


        def functions(self):
            return self.getTypedRuleContext(pddlParser.FunctionsContext,0)


        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.ActionContext)
            else:
                return self.getTypedRuleContext(pddlParser.ActionContext,i)


        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.EventContext)
            else:
                return self.getTypedRuleContext(pddlParser.EventContext,i)


        def process(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.ProcessContext)
            else:
                return self.getTypedRuleContext(pddlParser.ProcessContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)




    def domain(self):

        localctx = pddlParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(pddlParser.LP)
            self.state = 119
            self.match(pddlParser.T__0)
            self.state = 120
            self.domainName()
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 121
                self.requirements()


            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 124
                self.types()


            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 127
                self.predicates()


            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 130
                self.functions()


            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42:
                self.state = 136
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 133
                    self.action()
                    pass

                elif la_ == 2:
                    self.state = 134
                    self.event()
                    pass

                elif la_ == 3:
                    self.state = 135
                    self.process()
                    pass


                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.match(pddlParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(pddlParser.LP, 0)

        def NAME(self):
            return self.getToken(pddlParser.NAME, 0)

        def RP(self):
            return self.getToken(pddlParser.RP, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_domainName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainName" ):
                listener.enterDomainName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainName" ):
                listener.exitDomainName(self)




    def domainName(self):

        localctx = pddlParser.DomainNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_domainName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(pddlParser.LP)
            self.state = 144
            self.match(pddlParser.T__1)
            self.state = 145
            self.match(pddlParser.NAME)
            self.state = 146
            self.match(pddlParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequireKeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pddlParser.RULE_requireKey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequireKey" ):
                listener.enterRequireKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequireKey" ):
                listener.exitRequireKey(self)




    def requireKey(self):

        localctx = pddlParser.RequireKeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_requireKey)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 504) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequirementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(pddlParser.LP, 0)

        def RP(self):
            return self.getToken(pddlParser.RP, 0)

        def requireKey(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.RequireKeyContext)
            else:
                return self.getTypedRuleContext(pddlParser.RequireKeyContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_requirements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirements" ):
                listener.enterRequirements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirements" ):
                listener.exitRequirements(self)




    def requirements(self):

        localctx = pddlParser.RequirementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_requirements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(pddlParser.LP)
            self.state = 151
            self.match(pddlParser.T__8)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 504) != 0):
                self.state = 152
                self.requireKey()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self.match(pddlParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParentTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(pddlParser.TypeNameContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_parentType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentType" ):
                listener.enterParentType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentType" ):
                listener.exitParentType(self)




    def parentType(self):

        localctx = pddlParser.ParentTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parentType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(pddlParser.T__9)
            self.state = 161
            self.typeName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(pddlParser.NAME, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_typeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeName" ):
                listener.enterTypeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeName" ):
                listener.exitTypeName(self)




    def typeName(self):

        localctx = pddlParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(pddlParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(pddlParser.TypeNameContext,0)


        def parentType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.ParentTypeContext)
            else:
                return self.getTypedRuleContext(pddlParser.ParentTypeContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = pddlParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.typeName()
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 166
                self.parentType()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(pddlParser.LP, 0)

        def RP(self):
            return self.getToken(pddlParser.RP, 0)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.TypeContext)
            else:
                return self.getTypedRuleContext(pddlParser.TypeContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)




    def types(self):

        localctx = pddlParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(pddlParser.LP)
            self.state = 173
            self.match(pddlParser.T__10)
            self.state = 175 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 174
                self.type_()
                self.state = 177 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==45):
                    break

            self.state = 179
            self.match(pddlParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(pddlParser.NAME, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_atomName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomName" ):
                listener.enterAtomName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomName" ):
                listener.exitAtomName(self)




    def atomName(self):

        localctx = pddlParser.AtomNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_atomName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(pddlParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroundAtomParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(pddlParser.NAME, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_groundAtomParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroundAtomParameter" ):
                listener.enterGroundAtomParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroundAtomParameter" ):
                listener.exitGroundAtomParameter(self)




    def groundAtomParameter(self):

        localctx = pddlParser.GroundAtomParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_groundAtomParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(pddlParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiftedAtomParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(pddlParser.VAR, 0)

        def getRuleIndex(self):
            return pddlParser.RULE_liftedAtomParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiftedAtomParameter" ):
                listener.enterLiftedAtomParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiftedAtomParameter" ):
                listener.exitLiftedAtomParameter(self)




    def liftedAtomParameter(self):

        localctx = pddlParser.LiftedAtomParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_liftedAtomParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(pddlParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedAtomParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(pddlParser.TypeNameContext,0)


        def liftedAtomParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.LiftedAtomParameterContext)
            else:
                return self.getTypedRuleContext(pddlParser.LiftedAtomParameterContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_typedAtomParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedAtomParameter" ):
                listener.enterTypedAtomParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedAtomParameter" ):
                listener.exitTypedAtomParameter(self)




    def typedAtomParameter(self):

        localctx = pddlParser.TypedAtomParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_typedAtomParameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 187
                self.liftedAtomParameter()
                self.state = 190 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==44):
                    break

            self.state = 192
            self.match(pddlParser.T__9)
            self.state = 193
            self.typeName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def liftedAtomParameter(self):
            return self.getTypedRuleContext(pddlParser.LiftedAtomParameterContext,0)


        def groundAtomParameter(self):
            return self.getTypedRuleContext(pddlParser.GroundAtomParameterContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_atomParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomParameter" ):
                listener.enterAtomParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomParameter" ):
                listener.exitAtomParameter(self)




    def atomParameter(self):

        localctx = pddlParser.AtomParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_atomParameter)
        try:
            self.state = 197
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [44]:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.liftedAtomParameter()
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.groundAtomParameter()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomName(self):
            return self.getTypedRuleContext(pddlParser.AtomNameContext,0)


        def atomParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.AtomParameterContext)
            else:
                return self.getTypedRuleContext(pddlParser.AtomParameterContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)




    def atom(self):

        localctx = pddlParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.atomName()
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44 or _la==45:
                self.state = 200
                self.atomParameter()
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedAtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomName(self):
            return self.getTypedRuleContext(pddlParser.AtomNameContext,0)


        def typedAtomParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.TypedAtomParameterContext)
            else:
                return self.getTypedRuleContext(pddlParser.TypedAtomParameterContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_typedAtom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedAtom" ):
                listener.enterTypedAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedAtom" ):
                listener.exitTypedAtom(self)




    def typedAtom(self):

        localctx = pddlParser.TypedAtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_typedAtom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            self.atomName()
            self.state = 210
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 207
                self.typedAtomParameter()
                self.state = 212
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

